<resources>
    <string name="app_name">Temara</string>
    <string name="desc_splash">Image Logo For Splash Activity</string>
    <string name="welcome_desc">Terkadang, Kita butuh seseorang untuk bicara</string>
    <string name="desc_welcome">Bicara adalah cara terbaik untuk mengurangi beban emosional, tetapi sulit menemukan seseorang yang dapat dipercaya. Kadang-kadang, kita takut berbicara karena khawatir diabaikan, dihakimi, atau dicap lemah.</string>
    <string name="masuk">Masuk</string>
    <string name="desc_welcome2">Tenang, jangan takut ya.</string>
    <string name="desc_welcome3">Tenangkan dirimu, kami disini ada untukmu untuk berbicara tanpa kamu merasa takut dihakimi atau khawatir.</string>
    <string name="title_welcome">Kamu tidak sendirian!</string>
    <string name="desc_welcome4">Kamu jangan merasa sendirian, ya.  Kami disini selalu ada untuk kamu, kamu gaperlu takut untuk merasa di judge. </string>
    <string name="welcome">Selamat Datang</string>
    <string name="desc_welcome5">Kamu belum punya akun?</string>
    <string name="desctologin">Daftar di sini yuk</string>
    <string name="email">Email</string>
    <string name="email_desc">Masukkan Email Anda</string>
    <string name="check_valid_email">Tolong masukin email yang benar ya!</string>
    <string name="email_empty">Maaf, emailnya tidak boleh kosong.</string>
    <string name="password">Kata Sandi</string>
    <string name="password_minimum">Minimal Password 8 Karakter</string>
    <string name="password_empty">Maaf, password tidak boleh kosong</string>
    <string name="login">Masuk</string>
    <string name="desc_welcome6">Kamu sudah punya akun?</string>
    <string name="desclogin">Masuk dulu yuk!</string>
    <string name="name">Nama</string>
    <string name="name_minimum">Minimal nama 2 karakter</string>
    <string name="name_empty">Nama tidak boleh kosong ya!</string>
    <string name="name_desc">Masukkan nama anda</string>
    <string name="home">Beranda</string>
    <string name="article">Artikel</string>
    <string name="forum">Forum</string>
    <string name="profile">Profil</string>
    <string name="contenDesc_home">Background Home Fragment</string>
    <string name="selamat_sore">Selamat Sore,</string>
    <string name="name_user">null</string>
    <string name="desc_home">Gimana perasaan kamu hari ini?</string>
    <string name="senang">Senang</string>
    <string name="sedih">Sedih</string>
    <string name="angry">Marah</string>
    <string name="feelbad">Kurang Baik</string>
    <string name="preview_quotes">“Nggak perlu khawatir kalau nanti kamu tidak sehebat yang orang lain kira, ya..”</string>
    <string name="recommend_article">Rekomendasi artikel untukmu</string>
    <string name="preview_article_title">10 Cara Kreatif Untuk Memperkenalkan Diri Agar Kamu Selalu Diingat</string>
    <string name="preview_desc_article">Apakah kamu sering merasa malu dan takut untuk memperkenalkan diri didepan orang banyak?</string>
    <string name="read_more">Selengkapnya</string>
    <string name="jelajahi_artikel">Jelajahi Artikel</string>
    <string name="desc_article">Cari Artikel Yang Kamu Inginkan...</string>
    <string name="title_article">10 Cara Kreatif untuk Memperkenalkan Diri Agar Kamu Selalu Diingat</string>
    <string name="admin_temara">Admin Temara</string>
    <string name="preview_desc_article_full">Dalam hidup, kamu pasti pernah dan akan harus hadir di acara kumpul-kumpul, baik yang bernuansa formal maupun santai. Misalnya, pesta ulang tahun teman, workshop, seminar, pelatihan, hajatan keluarganya pacar, acara kantor, dan sebagainya. Di acara kumpul-kumpul ini, biasanya kamu harus memperkenalkan diri ke orang baru, terutama kalau kamu datang sendiri dan nggak kenal siapa-siapa. Masalahnya, bagi sebagian orang, memperkenalkan diri adalah hal yang beraaaat banget, terutama bagi mereka yang punya sifat introvert. Padahal memperkenalkan diri dengan baik adalah langkah pertama dalam menjalin networking, lho. Dan seperti yang pasti sering kamu dengar, networking itu penting untuk membuka kesempatan-kesempatan berharga. Makanya, kali ini Youthmanual mau sharing cara-cara kreatif untuk memperkenalkan diri kepada orang lain. Siapa tahu bisa membantu kamu memberikan kesan pertama yang tak terlupakan! Ceileee… *semprot Axe*</string>
    <string name="anonim">Anonim</string>
    <string name="created_at">31 Mei 2023 | 14.40</string>
    <string name="content_desc">Aku cuma bisa memaparkan segala kesetressan ini dalam gambar</string>
    <string name="desc_photo">Desc Photo</string>
    <string name="ruang_bicara">Ruang Bicara</string>
    <string name="_0">0</string>
    <string name="pengguna_temara_anonim">Pengguna Temara (Anonim)</string>
    <string name="comment_content">I know what you feel ka, semangat terus ya kak, kamu pasti kuat dalam menghadapi semua cobaan yang lagi kakak hadapi. </string>
    <string name="komentar_sebagai_anonim">Komentar sebagai anonim...</string>
    <string name="buat_postingan">Buat Postingan</string>
    <string name="send">Kirim</string>
    <string name="hint_post">Apa yang kamu pikirkan?</string>
    <string name="chat">Chat</string>
    <string name="cerita_yuk">Cerita yuk,</string>
    <string name="chat_desc">Kamu mau bercerita dengan siapa nih kira-kira?</string>
    <string name="informasi_pengguna">Informasi Pengguna</string>
    <string name="information">Temara adalah layanan Konsultasi dan Dukungan bagi pengguna yang mengalami masalah kesehatan mental. Temara berkomitmen untuk menjaga dan melindungi privasi data pengguna sebaik mungkin. Pengguna diharapkan untuk tidak menyebarkan identitas mereka kepada pengguna yang tidak dikenal. Gunakan layanan yang disediakan oleh Temara sebagai tempat untuk berbagi cerita dan saling mendukung. Temara berharap dapat menjadi wadah yang membantu teman-teman yang mengalami masalah kesehatan mental.</string>
    <string name="user_info">Informasi Pengguna</string>
    <string name="change_password">Ubah Kata Sandi</string>
    <string name="new_password">Masukkan Kata Sandi Baru</string>
    <string name="confirm_password">Konfirmasi Kata Sandi</string>
    <string name="desc_peduli">Kami ingin menyampaikan rasa empati dan simpati kami terhadap apa yang sedang Anda alami saat ini. Kami mengerti bahwa ini adalah masa yang sulit dan kami ingin Anda tahu bahwa kami ada di sini untuk mendukung Anda. Temara akan selalu ada untuk menemani Anda kapanpun Anda membutuhkannya.\n\nJika kami tidak dapat memberikan bantuan yang cukup untuk mengatasi kondisi Anda, kami ingin mendorong Anda untuk mencari bantuan dari Pelayanan Masyarakat atau meminta bantuan dari teman-teman Anda. Ingatlah bahwa Anda tidak sendirian dalam perjuangan ini. Kami sangat peduli dengan Anda dan ingin memastikan bahwa Anda tidak merasa kesepian.</string>
    <string name="kami_peduli_denganmu">Kami Peduli Denganmu!</string>
    <string name="user_class">Pengguna Gratis</string>
    <string name="panduan_temara">Panduan Temara</string>
    <string name="privasi_pengguna">Privasi Pengguna</string>
    <string name="faq">FAQ</string>
    <string name="keluar">Keluar</string>
    <string name="no_hp">Nomor Handphone</string>
    <string name="konsultasi_dokter">Konsultasi dengan Dokter</string>
    <string name="tvDoctorDesc">Yuk, Konsultasikan dirimu dengan dokter ahli psikologi dengan harga yang murah!</string>
    <string name="bot_title">Chat dengan Bot</string>
    <string name="bot_desc">Temara menyediakan layanan konsultasi melalui Bot, layanan ini bisa kamu gunakan ketika tidak ingin bercerita dengan orang lain</string>
    <string name="anon_title">Chat dengan Anonim</string>
    <string name="anon_desc">Kamu bisa dapatkan teman bicara mu melalui dengan pengguna anonim, yuk bercerita!</string>
    <string name="end">Akhiri</string>
    <string name="kamu_siapa">Kamu Siapa?</string>
    <string name="register_success">Your Account was Successfully created</string>
    <string name="personal_data">Personal Data</string>
    <string name="fullname">Nama Lengkap</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="save">Simpan</string>
    <string name="job">Pekerjaan</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="password_wrong">Email atau Password salah</string>
    <string name="error_500">Server Bermasalah, silahkan coba lagi ya!</string>
    <string name="error_401">Unauthorized, otoriasi gagal! silahkan coba lagi</string>
    <string name="register">Daftar</string>
    <string name="write">Sedang mengetik....</string>
    <string name="ara">Ara - Teman Bicaramu</string>
    <string name="born">Tanggal Lahir</string>
    <string name="createdat">CreatedAt</string>
    <string name="updatedat">UpdatedAt</string>
    <string name="add_button">Add Button</string>
    <string name="eight_characters">Minimal password yang diinput 8 karakter yah :)</string>
    <string name="camera">Camera</string>
    <string name="rotate_picture">Rotate Picture</string>
</resources>