<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="59dp"
        android:src="@drawable/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitleWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/epilogue_bold"
        android:text="@string/welcome"
        android:textColor="@color/green_500"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@id/ivLogo"
        app:layout_constraintRight_toRightOf="@id/ivLogo"
        app:layout_constraintTop_toBottomOf="@id/ivLogo" />

    <TextView
        android:id="@+id/tvDescWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/epilogue_medium"
        android:text="@string/desc_welcome5"
        android:textColor="@color/green_500"
        app:layout_constraintLeft_toLeftOf="@id/etEmail"
        app:layout_constraintTop_toBottomOf="@id/tvTitleWelcome"

        />

    <TextView
        android:id="@+id/btnToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/epilogue_bold"
        android:text="@string/desctologin"
        android:textColor="@color/green"
        app:layout_constraintBottom_toBottomOf="@id/tvDescWelcome"
        app:layout_constraintLeft_toRightOf="@id/tvDescWelcome"
        app:layout_constraintTop_toTopOf="@id/tvDescWelcome" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/epilogue_bold"
        android:text="@string/email"
        android:textColor="@color/green_500"
        app:layout_constraintLeft_toLeftOf="@id/etEmail"
        app:layout_constraintTop_toBottomOf="@id/tvDescWelcome"

        />


    <com.team.temara.custom.EmailEditText
        android:id="@+id/etEmail"
        android:layout_width="348dp"
        android:layout_height="55dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/epilogue_medium"
        android:inputType="textEmailAddress"
        android:textColor="@color/green_500"
        android:textSize="15sp"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEmail" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/epilogue_bold"
        android:text="@string/password"
        android:textColor="@color/green_500"
        app:layout_constraintLeft_toLeftOf="@id/etPassword"
        app:layout_constraintTop_toBottomOf="@id/etEmail" />

    <com.team.temara.custom.PasswordEditText
        android:id="@+id/etPassword"
        android:layout_width="348dp"
        android:layout_height="55dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/epilogue_medium"
        android:inputType="textPassword"
        android:textColor="@color/green_500"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="314dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectagle2"
        android:fontFamily="@font/epilogue_bold"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="@id/etPassword"
        app:layout_constraintRight_toRightOf="@id/etPassword"
        app:layout_constraintTop_toBottomOf="@id/etPassword" />

    <ProgressBar
        android:id="@+id/ProgressBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>