<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvForumPost"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivUser"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:src="@drawable/happy"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    
    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/anonim"
        android:textSize="11sp"
        android:fontFamily="@font/epilogue_bold"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/ivUser"
        app:layout_constraintTop_toTopOf="@id/ivUser"
        />

    <TextView
        android:id="@+id/tvCreatedAt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/created_at"
        android:textSize="12sp"
        android:fontFamily="@font/epilogue_regular"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/ivUser"
        app:layout_constraintTop_toBottomOf="@id/tvName"/>

    <TextView
        android:id="@+id/tvDescForum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/content_desc"
        android:layout_marginTop="10dp"
        android:maxLines="5"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/ivUser"
        app:layout_constraintStart_toStartOf="@id/ivUser"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvIvDesc"
        android:layout_width="382dp"
        android:layout_height="182dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintStart_toStartOf="@id/tvDescForum"
        app:layout_constraintTop_toBottomOf="@id/tvDescForum"
        app:layout_constraintEnd_toEndOf="@id/tvDescForum"
        >

        <ImageView
            android:id="@+id/ivDesc"
            android:layout_width="382dp"
            android:layout_height="182dp"
            tools:src="@tools:sample/avatars"
            android:scaleType="centerCrop"
            android:contentDescription="@string/desc_photo" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/ivLike"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:src="@drawable/ic_like"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@id/tvDescForum"
        app:layout_constraintTop_toBottomOf="@id/cvIvDesc"/>

    <TextView
        android:id="@+id/tvCountLike"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="18sp"
        android:textColor="@color/gray_100"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/epilogue_regular"
        app:layout_constraintStart_toEndOf="@id/ivLike"
        app:layout_constraintTop_toTopOf="@id/ivLike"
        app:layout_constraintBottom_toBottomOf="@id/ivLike"

        />

    <ImageView
        android:id="@+id/ivComment"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:src="@drawable/ic_comment"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/tvCountLike"
        app:layout_constraintTop_toBottomOf="@id/cvIvDesc"/>

    <TextView
        android:id="@+id/tvCountComment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="18sp"
        android:textColor="@color/gray_100"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/epilogue_regular"
        app:layout_constraintStart_toEndOf="@id/ivComment"
        app:layout_constraintTop_toTopOf="@id/ivLike"
        app:layout_constraintBottom_toBottomOf="@id/ivLike"

        />


    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/line"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/ivLike"
        />



</androidx.constraintlayout.widget.ConstraintLayout>